<resources>

    <string name="app_name">SpeakingTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="buttonTakePhoto_text">Prendre la photo</string>
    <string name="title_selection_contact">Create the group</string>
    <string name="buttonSendToDatabase">Send to database</string>
    <string name="buttonSelectGroup">Start meeting</string>
    <string name="buttonCreateGroup">Create a group</string>
    <string name="title_selection_group">SpeakingTime</string>
    <string name="buttonCreateTheGroup">Create the group</string>
    <string name="buttonSelectGroupAndDebuteMeeting">Start meeting</string>
    <string name="buttonCreateAndSaveToLocalDatabase">Create group and save it to local database</string>
    <string name="buttonCreateGroupOrSelectContacts">Start meeting : \n -create a group \n -select contacts</string>
    <string name="title_create_group_activity">Create a group activity</string>
    <string name="buttonDeleteGroup">Delete group</string>
    <string name="checkBoxAlertDialogPerso">Send to Remote Server</string>
    <string name="buttonEditGroup">Edit a group</string>
    <string name="buttonSelectGroupToEdit">Select this group to edit</string>
    <string name="title_selection_group_to_edit">Edit a group activity</string>
    <string name="buttonModifyThisGroupAndDebuteTheMeeting">Modify This Group And Debute The Meeting</string>
    <string name="buttonModifyThisGroup">Modify this group</string>
    <string name="title_selection_contact_to_edit">Edit this group</string>
	<string name="buttonSelectAll_ecoute">Select All</string>
	<string name="buttonSelectAll_parole">Select All</string>
	<string name="buttonSelectAll_inactif">Select All</string>
	<string name="buttonAddMember">+</string>
	<string name="buttonQuit">Quit</string>
	<string name="buttonCancelModifyThisGroup">Cancel</string>
	<string name="buttonUnselectAll_ecoute">Unselect All</string>
	<string name="buttonUnselectAll_parole">Unselect All</string>
	<string name="buttonUnselectAll_inactif">Unselect All</string>
	<string name="buttonStatistic">Statistics</string>
	<string name="title_statistic_activity">Statistics</string>
	<string name="title_statistic_choice_activity">Statistics</string>
	<string name="title_statistic_result_activity">Statistic Result</string>
	<string name="buttonGetValue">Get Value</string>
	<string name="buttonBarGraph">Speaking time per participant</string>
	<string name="title_statistic_bar_graph">Bar Graph</string>
	<string name="buttonBarGraph1">Number of partipants per time class</string>
	<string name="buttonPreferences">Preferences</string>
	<string name="title_preferences_activity">Preferences</string>
	<string name="buttonSavePreferences">Save Preferences</string>
	<string name="buttonCancelPreferences">Cancel</string>
	<string name="buttonBarGraph2">Generate Box Plots (Internet needed)</string>
	<string name="title_boxplot">Box Plot</string>
	<string name="editTextTimeInterval">1</string>
	<string name="buttonCreateGroup_Home">Create a group</string>
	<string name="buttonAddContact">Add Contact</string>
	<string name="title_selection_contact_to_add">Add contact</string>
	<string name="buttonCancelAddContact">Cancel</string>
	<string name="timeintervalforsavefile">1</string>
	<string name="buttonHistograms">Histograms</string>
	<string name="buttonBoxPlots">Box Plots</string>
	<string name="buttonGenerateBoxPlots">Generate Box Plots</string>
	<string name="buttonUpListViewEcoute">^^^^^^^</string>
	<string name="title_bargraph_activity">Speaking time per participant</string>
	<string name="buttonSaveGraphAsImage">Save graph as image</string>
	<string name="buttonSendGraphByEMail">Send graph by E-mail</string>
	<string name="title_bargraph1_activity">Number of participants per time class</string>
	
</resources>