<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" 
    android:gravity="bottom">
		
       	<LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:gravity="center"
   			
   			>
			<Button
    		    android:id="@+id/buttonSelectGroup"
    		    android:text="@string/buttonSelectGroup"
    		    android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="16dp"
		    	>
    		</Button>
    	</LinearLayout>
    	
       	<LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:gravity="center"
   			
   			>
			<Button
    		    android:id="@+id/buttonEditGroup"
    		    android:text="@string/buttonEditGroup"
    		    android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="16dp"
		    	>
    		</Button>
    	</LinearLayout>
        
        <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:gravity="center"	
  			 >
			<Button
		    	android:id="@+id/buttonCreateGroupOrSelectContacts"
		    	android:text="@string/buttonCreateGroupOrSelectContacts"
		    	android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="16dp" >
    		</Button>
    	</LinearLayout>
    	
        <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:gravity="center"	
  			 >
			<Button
		    	android:id="@+id/buttonStatistic"
		    	android:text="@string/buttonStatistic"
		    	android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="16dp" >
    		</Button>
    	</LinearLayout>
    	
        <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:gravity="center"	
  			 >
			<Button
		    	android:id="@+id/buttonPreferences"
		    	android:text="@string/buttonPreferences"
		    	android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="16dp" >
    		</Button>
    	</LinearLayout>        
        
        <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:gravity="center"	
  			 >
			<Button
		    	android:id="@+id/buttonQuit"
		    	android:text="@string/buttonQuit"
		    	android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textSize="16dp" >
    		</Button>
    	</LinearLayout>
    	
</LinearLayout>