<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="48dip"
    android:gravity="center_vertical"
    android:background="#323331">
    
    
	<LinearLayout
	    android:orientation="vertical"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center_horizontal|center_vertical">
	 
	    <TextView
	    	android:id="@+id/title_ecoute"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14dip"
	        android:textColor="#ff0000"
	        android:textStyle="bold"
	        android:text="Listening" />
	    
	    <Button
			android:id="@+id/buttonSelectAll_ecoute"
		    android:text="@string/buttonSelectAll_ecoute"
		   	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="10dp"
			android:layout_gravity="left" >
	   	</Button>
	    
	</LinearLayout>
	    
	<LinearLayout
	    android:orientation="vertical"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center_horizontal|center_vertical">
	 
	    <TextView
	    	android:id="@+id/title_parole"
	       	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14dip"
	        android:textColor="#ff0000"
	        android:textStyle="bold"
	        android:text="Speaking" />
	    
	    <Button
			android:id="@+id/buttonSelectAll_parole"
		    android:text="@string/buttonSelectAll_parole"
		   	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="10dp"
			android:layout_gravity="left" >
	   	</Button>
	</LinearLayout>
	    
	<LinearLayout
	    android:orientation="vertical"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center_horizontal|center_vertical">
	 
	    <TextView
	    	android:id="@+id/title_idle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14dip"
	        android:textColor="#ff0000"
	        android:textStyle="bold"
	        android:text="Idle" />
	    <Button
			android:id="@+id/buttonSelectAll_inactif"
		    android:text="@string/buttonSelectAll_inactif"
		   	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="10dp"
			android:layout_gravity="left" >
	   	</Button>
	    
	</LinearLayout>

</LinearLayout>	
